--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,17 @@
 body{
 font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+background-image: url("/img/cutepizza.png");
+background-position: right bottom;
+background-repeat: no-repeat;
+background-color: lightcoral;
+font-size: large;
+ ;
+}
+.jumbotron{
+  background-color: lightcyan;
 }
 
 h2{
-  margin-top: 5%;
   font-style: bolder;
 }
 
@@ -13,17 +21,17 @@ h5{
 
 h6{
   font-style: italic;
-
+  font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
 .choiceHeading{
-  margin-top: 5%;
-  
+  margin-top: 5%;  
 }
 
 .radio{
-font-family: cursive;
+
 }
+
 #placeOrder {
   margin-top: 5%;
 }
@@ -36,5 +44,6 @@ font-family: cursive;
   padding: 10%;
   display: none;
   margin-top: 15%;
-  background-color: lightgrey;
+  background-color: rgb(211, 211, 211, .95);
+  ;
 }
