--- a/css/styles.css
+++ b/css/styles.css
@@ -46,6 +46,11 @@ h6{
   margin-top: 5%;
 }
 
+.btn{
+  color:black;
+  background-color: turquoise;
+  font-size: larger;
+}
 .pizzaOrder {
   float: right;
   border: 5px dashed darkgreen;
