--- a/css/styles.css
+++ b/css/styles.css
@@ -38,11 +38,15 @@ h6{
   margin-top: 5%;  
 }
 
-.radio{
-  
+#placeOrder {
+  margin-top: 5%;
 }
 
-#placeOrder {
+#morePizzas{
+  margin-top: 5%;
+}
+
+.morePizzaDescription{
   margin-top: 5%;
 }
 
@@ -57,8 +61,9 @@ h6{
   width: auto;
   height: auto;
   padding: 10%;
+  padding-top: 5%;
   display: none;
-  margin-top: 15%;
+
   color: black;
   background-color: rgb(211, 211, 211, .95);
   margin-bottom: 50%;
